# mcp-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  script.py  test_data.py
api/: main.py  mcp_client.py  requirements.txt
front/: chatbot.py  main.py
front/utils/: logger.py
